--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,27 +7,21 @@
 # NOTE that only one of the CV options should be selected, the first is for the
 #      Markdown formatted page while the second is generated using JSON.
 
+
 main:
-  - title: "Publications"
+  - title: "home"
+    url: /
+  - title: "research"
+    url: /research/
+  - title: "publications"
     url: /publications/
-
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
+  - title: "cv"
     url: /cv/
-    
+  - title: "other projects"
+    url: /projects/
+
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
