--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "mdubied.github.io" # the name of your repository con
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "gct_2024_square.png"
   name             : "Mathieu Dubied"
   pronouns         : "he/him" # optional
   bio              : "PhD Researcher in CSS at EUI"
@@ -251,7 +251,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
   # _teaching
   - scope:
       path: ""
@@ -267,7 +267,7 @@ defaults:
       type: publications
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       share: true
       comments: true
   # _portfolio
