--- a/_config.yml
+++ b/_config.yml
@@ -26,19 +26,19 @@ author:
   avatar           : "gct_2024_square.jpg"
   name             : "Mathieu Dubied"
   pronouns         : "he/him" # optional
-  bio              : "PhD Researcher in CSS at EUI"
+  bio              : "PhD Researcher in CSS at EUI <br> <a href=\"mailto:mathieu.dubied@eui.eu\">mathieu.dubied@eui.eu</a>"
   location         : # "Earth"
   employer         : # "Red Brick University"
   uri              : # URL
-  email            : "mathieu.dubied@eui.eu" 
+  email            : # "mathieu.dubied@eui.eu" 
 
   # Academic websites
   academia         : # URL
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   inspire-hep      : # URL
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : # "http://orcid.org/yourorcidurl"
   semantic         : # URL
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
@@ -54,7 +54,7 @@ author:
 
   # Social media
   artstation       : # Username
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
