--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   - title: "cv"
     url: /cv/
   - title: "other projects"
-    url: /projects/
+    url: /other-projects/
 
   # - title: "CV"
   #   url: /cv-json/
